src/test/resources/scripts/language/parser/invalid/type/genericStr.sbsc
test = (a: str<int>) -> {

};

return true;